Add nav Menu to about page Remove some comments in index.html and js

--- a/about.html
+++ b/about.html
@@ -14,106 +14,126 @@
       href="https://unpkg.com/boxicons@2.1.4/css/boxicons.min.css"
       rel="stylesheet"
     />
-    <link rel="stylesheet" href="../css/style.css">
+    <link rel="stylesheet" href="../css/style.css" />
   </head>
   <body>
     <header class="main-nav">
-      <div class="top-nav" id="top-nav">
-        <i class="bx bxl-facebook-square"></i>
-        <i class="bx bxl-twitter"></i>
-        <a href="#">English</a>
-        <a href="#">My Page</a>
-        <a href="#">Logout</a>
-      </div>
-      <nav class="navbar navbar-expand-md ">
-        <div class="container-fluid">
-          <button
-            class="navbar-toggler"
-            type="button"
-            data-bs-toggle="collapse"
-            data-bs-target="#navbarTogglerDemo01"
-            aria-controls="navbarTogglerDemo01"
-            aria-expanded="false"
-            aria-label="Toggle navigation"
-          >
-            <span class="navbar-toggler-icon"></span>
-          </button>
-          <div class="collapse navbar-collapse" id="navbarTogglerDemo01">
-            <a class="navbar-brand" href="#">Hidden brand</a>
-            <ul class="navbar-nav me-auto mb-2 mb-lg-0">
-              <li class="nav-item">
-                <a class="nav-link active" aria-current="page" href="#">Home</a>
-              </li>
-              <li class="nav-item">
-                <a class="nav-link" href="#">Link</a>
-              </li>
-              <li class="nav-item">
-                <a class="nav-link disabled">Disabled</a>
-              </li>
-            </ul>
-            </form>
+      <div class="top-nav">
+        <div class="container">
+          <div class="row">
+            <div class="col">
+              <ul class="list-inline d-flex justify-content-end gap-4 social">
+                <li class="list-inline-item">
+                  <a href="#"><i class="bx bxl-facebook-square"></i></a>
+                </li>
+                <li class="list-inline-item">
+                  <a href="#"><i class="bx bxl-twitter"></i></a>
+                </li>
+                <li class="list-inline-item"><a href="#">Logout</a></li>
+                <li class="list-inline-item"><a href="#">My Page</a></li>
+                <li class="list-inline-item"><a href="#">Español</a></li>
+              </ul>
+            </div>
           </div>
+        </div>
+      </div>
+      <nav class="navigation">
+        <div class="logo-placeholder">
+          <a href="#" target="_blank" rel="noopener"
+            ><img src="./iconos/asd.svg" alt="Logo Food"
+          /></a>
+        </div>
+        <div class="burguer-menu">
+          <button class="btn" type="button">
+            <i class="bx bx-menu"></i>
+          </button>
+        </div>
+        <div class="nav-links">
+          <ul class="list-unstyled">
+            <li><a id="port-link" href="/index.html">Home</a></li>
+            <li><a id="about-link" href="#about">Program</a></li>
+            <li><a id="cont-link" href="#contact">Join</a></li>
+            <li><a id="cont-link" href="#contact">Sponsor</a></li>
+            <li><a id="cont-link" href="#contact">News</a></li>
+          </ul>
         </div>
       </nav>
     </header>
     <section class="hero p-3">
       <div class="container">
         <div class="row">
-          <div class="col  text-center">
+          <div class="col text-center">
             <span class="h3 text-red">"Hello, Sharing world"</span>
             <h1 class="text-red mb-4">Healthy food global summit 2023</h1>
             <p class="event-description about">
-              The Healthy Food Global Conference 2023 brings together a community of experts, chefs, and distinguished personalities from the culinary world.
+              The Healthy Food Global Conference 2023 brings together a
+              community of experts, chefs, and distinguished personalities from
+              the culinary world.
             </p>
 
-            <div class="event-info about mt-4 ">
-              <p class="text-center">Please Contact us per email for any further questions</p>
+            <div class="event-info about mt-4">
+              <p class="text-center">
+                Please Contact us per email for any further questions
+              </p>
               <p class="text-center">About WF Conference 2023!</p>
-              <p class="text-center fw-bold text-decoration-underline">wfc2023@university.com</p>
+              <p class="text-center fw-bold text-decoration-underline">
+                wfc2023@university.com
+              </p>
             </div>
           </div>
         </div>
       </div>
     </section>
-    <section class="about-logo container ">
+    <section class="about-logo container">
       <div class="row main-schedule-about">
         <div class="col">
-          <h2 class="text-center logo-font fw-bold pt-4">World Food Conference Group</h2>
+          <h2 class="text-center logo-font fw-bold pt-4">
+            World Food Conference Group
+          </h2>
           <h2 class="text-center logo-font fs-3 fw-bold">WFC 2023 Logo</h2>
-          <p class="text-center sm-fz">The logo of FWC was decided trought the "LOGO Competition from 8, june to 7, july" After online public voting and selectiong commite judging process.</p>
+          <p class="text-center sm-fz">
+            The logo of FWC was decided trought the "LOGO Competition from 8,
+            june to 7, july" After online public voting and selectiong commite
+            judging process.
+          </p>
           <div class="container about-container-img">
-            <img class="logo" src="./img/world-food-logo.png" alt="WFC logo">
+            <img class="logo" src="./img/world-food-logo.png" alt="WFC logo" />
           </div>
-          <hr class="grey-bar">
-          <p class="text-center   fw-bold main-program logo-font">See the past WF Global Conference </p>
-          <p class="text-center sm-fz">Take a look the last two WFC which took place in Venezuela and Brasil"</p>
+          <hr class="grey-bar" />
+          <p class="text-center fw-bold main-program logo-font">
+            See the past WF Global Conference
+          </p>
+          <p class="text-center sm-fz">
+            Take a look the last two WFC which took place in Venezuela and
+            Brasil"
+          </p>
           <div class="container-md last-meet">
             <div class="image-container">
-              <img src="./img/venezuela-2022.jpg" alt="Venezuela 2022">
+              <img src="./img/venezuela-2022.jpg" alt="Venezuela 2022" />
               <div class="text-overlay">
                 <h3><span>2022</span> WFC in Venezuela</h3>
               </div>
             </div>
             <div class="image-container">
-              <img src="./img/brasil-2021.jpg" alt="Brasil 2021">
+              <img src="./img/brasil-2021.jpg" alt="Brasil 2021" />
               <div class="text-overlay">
                 <h3><span>2021</span> WFC in Goias</h3>
               </div>
             </div>
           </div>
         </div>
-      </div>   
+      </div>
     </section>
 
     <section class="container main-partners show">
       <h2 class="text-center fs-3">Partners</h2>
       <div class="row">
         <div class="col d-flex justify-content-center gap-2">
-            <img src="./iconos/mozilla.svg" alt="mozilla">
-            <img src="./iconos/google.svg" alt="google">
-            <img src="./iconos/naver.svg" alt="naver">
-            <img src="./iconos/daum.svg" alt="daum">
-            <img src="./iconos/airbnb.svg" alt="airbnb">
+          <img src="./iconos/mozilla.svg" alt="mozilla" />
+          <img src="./iconos/google.svg" alt="google" />
+          <img src="./iconos/naver.svg" alt="naver" />
+          <img src="./iconos/daum.svg" alt="daum" />
+          <img src="./iconos/airbnb.svg" alt="airbnb" />
         </div>
       </div>
     </section>
@@ -132,5 +152,6 @@
       integrity="sha384-ENjdO4Dr2bkBIFxQpeoTz1HIcje39Wm4jDKdf19U8gI4ddQ3GYNS7NTKfAdVQSZe"
       crossorigin="anonymous"
     ></script>
+    <script src="./js/main.js"></script>
   </body>
 </html>
