--- a/index.html
+++ b/index.html
@@ -45,11 +45,7 @@
         </div>
         <div class="burguer-menu">
           <button class="btn" type="button">
-            <!-- <img
-              id="myImage"
-              src="./img/burguerMenu.svg"
-              alt="Navigation Menu"
-            /> --><i class="bx bx-menu"></i>
+            <i class="bx bx-menu"></i>
           </button>
         </div>
         <div class="nav-links">
