--- a/about.html
+++ b/about.html
@@ -17,7 +17,7 @@
     <link rel="stylesheet" href="../css/style.css" />
   </head>
   <body>
-    <header class="main-nav">
+    <header id="start" class="main-nav">
       <div class="top-nav">
         <div class="container">
           <div class="row">
@@ -50,7 +50,7 @@
         </div>
         <div class="nav-links">
           <ul class="list-unstyled">
-            <li><a id="port-link" href="/index.html">Home</a></li>
+            <li><a id="port-link" href="/index.html#start-index">Home</a></li>
             <li><a id="about-link" href="#about">Program</a></li>
             <li><a id="cont-link" href="#contact">Join</a></li>
             <li><a id="cont-link" href="#contact">Sponsor</a></li>
