Update footer gap

--- a/index.html
+++ b/index.html
@@ -271,7 +271,7 @@
       <p class="text-center">Partners</p>
       <div class="container">
         <div class="row">
-          <div class="col d-flex justify-content-center gap-4">
+          <div class="col d-flex justify-content-center sp">
             <img src="./iconos/mozilla.svg" alt="mozilla" />
             <img src="./iconos/google.svg" alt="google" />
             <img src="./iconos/naver.svg" alt="naver" />
