Add navBar btn Add  navBar logo Update bg

--- a/index.html
+++ b/index.html
@@ -39,9 +39,9 @@
       </div>
       <nav class="navigation">
         <div class="logo-placeholder">
-          <a href="#" target="_blank" rel="noopener"
-            ><img src="./iconos/asd.svg" alt="Logo Food"
-          /></a>
+          <a href="/index.html#start-index" target="_blank" rel="noopener"
+            ><i class="bx bxs-bowl-hot">HealthyFood</i></a
+          >
         </div>
         <div class="burguer-menu">
           <button class="btn" type="button">
@@ -55,6 +55,7 @@
             <li><a id="cont-link" href="#contact">Join</a></li>
             <li><a id="cont-link" href="#contact">Sponsor</a></li>
             <li><a id="cont-link" href="#contact">News</a></li>
+            <button>Hf JoinUs</button>
           </ul>
         </div>
       </nav>
