In about.html: Add navBar btn Add  navBar logo Update styles salmon color and fz

--- a/about.html
+++ b/about.html
@@ -39,9 +39,9 @@
       </div>
       <nav class="navigation">
         <div class="logo-placeholder">
-          <a href="#" target="_blank" rel="noopener"
-            ><img src="./iconos/asd.svg" alt="Logo Food"
-          /></a>
+          <a href="/index.html#start-index" target="_blank" rel="noopener"
+            ><i class="bx bxs-bowl-hot">HealthyFood</i></a
+          >
         </div>
         <div class="burguer-menu">
           <button class="btn" type="button">
@@ -50,11 +50,12 @@
         </div>
         <div class="nav-links">
           <ul class="list-unstyled">
-            <li><a id="port-link" href="/index.html#start-index">Home</a></li>
+            <li><a id="port-link" href="/about.html#start">About</a></li>
             <li><a id="about-link" href="#about">Program</a></li>
             <li><a id="cont-link" href="#contact">Join</a></li>
             <li><a id="cont-link" href="#contact">Sponsor</a></li>
             <li><a id="cont-link" href="#contact">News</a></li>
+            <button>Hf JoinUs</button>
           </ul>
         </div>
       </nav>
