Fix index.htnl link

--- a/about.html
+++ b/about.html
@@ -50,7 +50,7 @@
         </div>
         <div class="nav-links">
           <ul class="list-unstyled">
-            <li><a id="port-link" href="/about.html#start">About</a></li>
+            <li><a id="port-link" href="/index.html#start-index">Home</a></li>
             <li><a id="about-link" href="#about">Program</a></li>
             <li><a id="cont-link" href="#contact">Join</a></li>
             <li><a id="cont-link" href="#contact">Sponsor</a></li>
