Update Partners about section to correctly display Styling Hf Join btn

--- a/about.html
+++ b/about.html
@@ -126,15 +126,17 @@
       </div>
     </section>
 
-    <section class="container main-partners show">
-      <h2 class="text-center fs-3">Partners</h2>
-      <div class="row">
-        <div class="col d-flex justify-content-center gap-2">
-          <img src="./iconos/mozilla.svg" alt="mozilla" />
-          <img src="./iconos/google.svg" alt="google" />
-          <img src="./iconos/naver.svg" alt="naver" />
-          <img src="./iconos/daum.svg" alt="daum" />
-          <img src="./iconos/airbnb.svg" alt="airbnb" />
+    <section class="main-partners">
+      <p class="text-center">Partners</p>
+      <div class="container">
+        <div class="row">
+          <div class="col d-flex justify-content-center sp">
+            <img src="./iconos/mozilla.svg" alt="mozilla" />
+            <img src="./iconos/google.svg" alt="google" />
+            <img src="./iconos/naver.svg" alt="naver" />
+            <img src="./iconos/daum.svg" alt="daum" />
+            <img src="./iconos/airbnb.svg" alt="airbnb" />
+          </div>
         </div>
       </div>
     </section>
