--- a/about.html
+++ b/about.html
@@ -55,7 +55,7 @@
             <li><a id="cont-link" href="#contact">Join</a></li>
             <li><a id="cont-link" href="#contact">Sponsor</a></li>
             <li><a id="cont-link" href="#contact">News</a></li>
-            <button>Hf JoinUs</button>
+            <button class="btn">Hf JoinUs</button>
           </ul>
         </div>
       </nav>
