updates in the About and index files: Updated the <p> element to <h2> element in the main-partes section. Hidden the Brand text and change for the Healthy Food Logo in the main-footer. Updated the styles to reflect the mentioned changes. Added padding to main-partners in 768+ resolutions. Updated the font size of the nav links (nav-links) to 1rem

--- a/index.html
+++ b/index.html
@@ -269,7 +269,7 @@
     </section>
 
     <section class="main-partners">
-      <p class="text-center">Partners</p>
+      <h2 class="text-center">Partners</h2>
       <div class="container">
         <div class="row">
           <div class="col d-flex justify-content-center sp">
@@ -285,8 +285,10 @@
     <footer class="main-footer">
       <div class="container">
         <div class="row">
-          <div class="col d-flex justify-content-center gap-4">
-            <a class="navbar-brand" href="#">Hidden brand</a>
+          <div class="col d-flex justify-content-center gap-4 mt-2">
+            <a class="navbar-brand" href="#"
+              ><i class="bx bxs-bowl-hot">HealthyFood</i></a
+            >
             <p>2023 World Food Conference</p>
           </div>
         </div>
