--- a/about.html
+++ b/about.html
@@ -127,7 +127,7 @@
     </section>
 
     <section class="main-partners">
-      <p class="text-center">Partners</p>
+      <h2 class="text-center">Partners</h2>
       <div class="container">
         <div class="row">
           <div class="col d-flex justify-content-center sp">
@@ -143,8 +143,10 @@
     <footer class="main-footer">
       <div class="container">
         <div class="row">
-          <div class="col d-flex justify-content-center gap-4">
-            <a class="navbar-brand" href="#">Hidden brand</a>
+          <div class="col d-flex justify-content-center gap-4 mt-2">
+            <a class="navbar-brand" href="#"
+              ><i class="bx bxs-bowl-hot">HealthyFood</i></a
+            >
             <p>2023 World Food Conference</p>
           </div>
         </div>
