--- a/index.html
+++ b/index.html
@@ -18,10 +18,10 @@
     <header class="main-navigation">
       <nav class="nav">
         <div class="logo-placeholder">
-          <a href="https://www.linkedin.com/in/pablo-bonasera-142327257/" target="_blank" rel="noopener"
-            ><img src="./img/namelogo.png" alt="Pablo Bonasera"
-          /></a>
-        </div>
+          <a href="https://www.linkedin.com/in/pablo-bonasera-142327257/" target="_blank" rel="noopener">
+            <img src="./img/namelogo.png" alt="Pablo Bonasera"/>
+          </a>
+        </div>        
         <div class="burguer-menu">
           <button id="myButton" type="button" href="#">
             <img id="myImage" src="./img/burguerMenu.svg" alt="Navigation Menu" />
@@ -46,20 +46,12 @@
         </p>
         <h2>Let’s Connect</h2>
         <ul>
-          <li>
-            <a href="#"><img src="./img/icons/twitter.svg" alt="Twitter Icon" /></a>
+            <a href="https://www.linkedin.com/in/pablo-bonasera/"><img src="./img/icons/linkedin.svg" target="_blank" alt="Linkedin Icon" /></a>
           </li>
           <li>
-            <a href="#"><img src="./img/icons/linkedin.svg" alt="Linkedin Icon" /></a>
-          </li>
+            <a href="https://medium.com/@pablobonasera"><img src="./img/icons/M.svg" alt="Medium Icon" /></a>
           <li>
-            <a href="#"><img src="./img/icons/M.svg" alt="Medium Icon" /></a>
-          </li>
-          <li>
-            <a href="#"><img src="./img/icons/twofinger.svg" alt="Two Icon" /></a>
-          </li>
-          <li>
-            <a href="#"><img src="./img/icons/githubaboutus.svg" alt="Github Icon" /></a>
+            <a href="https://github.com/PabloBona"><img src="./img/icons/githubaboutus.svg" alt="Github Icon" /></a>
           </li>
         </ul>
       </div>
@@ -81,19 +73,13 @@
           <h3 class="uppercase">Let’s Connect</h3>
           <ul class="social-icons">
             <li>
-              <a href="#"><img src="./img/icons/linkedin.svg" alt="Linkedin Icon" /></a>
+              <a href="https://www.linkedin.com/in/pablo-bonasera/"><img src="./img/icons/linkedin.svg" alt="Linkedin Icon" /></a>
             </li>
             <li>
-              <a href="#"><img src="./img/icons/twofinger.svg" alt="Two Icon" /></a>
+              <a href="https://medium.com/@pablobonasera"><img src="./img/icons/M.svg" alt="Medium Icon" /></a>
             </li>
             <li>
-              <a href="#"><img src="./img/icons/twitter.svg" alt="Twitter Icon" /></a>
-            </li>
-            <li>
-              <a href="#"><img src="./img/icons/M.svg" alt="Medium Icon" /></a>
-            </li>
-            <li>
-              <a href="#"><img src="./img/icons/githubaboutus.svg" alt="Github Icon" /></a>
+              <a href="https://github.com/PabloBona"><img src="./img/icons/githubaboutus.svg" alt="Github Icon" /></a>
             </li>
           </ul>
     <div class="about-footer open-project-modal">
